package com.directi.training.ocp.exercise_solution;

public class SpaceSlot implements Resource{


    @Override
    public void markFree(int resourceId) {

    }

    @Override
    public void markBusy(int resourceId) {

    }

    @Override
    public int findFree() {
        return 0;
    }
}
